feat: db, router

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "status_codes.h": "c",
         "user.h": "c",
         "json.h": "c",
-        "macro.h": "c"
+        "macro.h": "c",
+        "string.h": "c"
     }
 }
