feat: router upgrade v1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,9 @@
         "user.h": "c",
         "json.h": "c",
         "macro.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "cleanup.h": "c",
+        "router.h": "c",
+        "microhttpd.h": "c"
     }
 }
